[project]
name = "mldsa"
version = "0.1.0"
description = "A pure-Python implementation of ML-DSA-44 verification"
readme = "README.md"
authors = [{name = "Filippo Valsorda"}]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.0; python_version < '3.11'",
]
license = "CC0-1.0 OR 0BSD"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "RUF", "UP", "ANN", "D", "DOC"]
ignore = ["E741", "RUF002", "RUF003", "DOC201", "DOC502", "N806"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]

[tool.ty.rules]
all = "error"
