[project]
name = "mldsa"
version = "0.1.0"
description = "A pure-Python implementation of ML-DSA verification"
readme = "README.md"
authors = [{name = "Filippo Valsorda"}]
requires-python = ">=3.8"
dependencies = [
    "typing_extensions>=4.0; python_version < '3.11'",
]
license = "CC0-1.0 OR 0BSD"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
homepage = "https://github.com/FiloSottile/mldsa-py"
source = "https://github.com/FiloSottile/mldsa-py"
issues = "https://github.com/FiloSottile/mldsa-py/issues"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
line-length = 105

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "RUF", "UP", "ANN", "D", "DOC"]
ignore = ["E741", "RUF002", "RUF003", "DOC201", "DOC502", "N806"]
preview = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN"]

[tool.ty.rules]
all = "error"
